--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,326 @@
+@charset 'UTF-8';
 
+/*
+VARIABLES
+================================================ */
+:root {
+    --light-green: #d5edeb;
+    --green: #63dbd0;
+    --brown: rgb(26, 104, 250);
+    --light-grey: #eee;
+    --white: #fff;
+    --oswald-font: 'Oswald', sans-serif;
+}
+ 
+/*ローディング */
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    opacity: 1;
+    visibility: visible;
+}    
+
+#loading-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: lightgreen;
+    z-index: 999;
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(100vh); /* 初期状態では下に隠れている */
+}
+#loading p {
+    font-family: 'Oswald', sans-serif;
+    font-size: 24px;
+    color: white;
+    opacity: 1;
+    visibility: visible;
+}
+
+
+/*
+GENERAL STYLING
+================================================ */
+body {
+    color: var(--brown);
+    background: url('../images/bg-shadow.jpg') no-repeat right bottom / cover fixed;
+    text-align: center;
+    margin: 0 auto;
+    width: 1400px
+}
+
+/*
+COMMON
+================================================ */
+p {
+    line-height: 2;
+}
+img {
+    max-width: 100%;
+}
+.title {
+    font-family: var(--oswald-font);
+    font-size: min(10vw, 4rem);
+    margin-bottom: 2rem;
+    -webkit-text-stroke: 1px rgb(255, 255, 255); /* 黒い境界線 */
+    text-shadow: 5px 2px 3px  rgb(255, 255, 255);
+      
+}
+.btn {
+    color: var(--white);
+    background: rgb(231, 52, 82);
+    border: 1px solid var(--brown);
+    text-decoration: none;
+    padding: 1rem;
+    display: inline-block;
+    margin: 2rem 0;
+    transition: 1.4s;
+    box-shadow: -5px -5px 10px 0px rgba(142, 2, 2, 0.5), 5px 5px 10px 0px rgba(0,0,0,0.3);
+    border-radius:60px;
+
+}
+
+/*
+LAYOUT
+================================================ */
+.wrapper {
+    max-width: 40rem;
+    margin: auto;
+    padding: 0 1rem;
+}
+
+
+/*
+HERO
+================================================ */
+.hero {
+    height: 100vh;
+    position: relative;
+}
+.hero::after {
+    content: '';
+    width: 50%;
+    height: 100vh;
+    background: url('../images/main.jpg') no-repeat center / cover;
+    position: absolute;
+    inset: 0;
+}
+.hero .title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: 2;
+    width: 100%;
+    font-size: max(12vw, 3rem);
+    line-height: 1.2;
+}
+
+/*
+CONCEPT
+================================================ */
+.concept {
+    margin: 8rem 0;
+    background-image: linear-gradient(
+        to right,
+        transparent 0%,
+        transparent 20%,
+        var(--light-grey) 20%,
+        var(--light-grey) 100%
+    );
+}
+.concept p {
+    text-align: left;
+    margin-bottom: 2rem;
+}
+
+/*
+GALLERY
+================================================ */
+.gallery {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 120px;
+}
+.gallery-image {
+    width: min(100%, calc(38rem - 2rem));
+    margin: auto;
+    position: relative;
+}
+.gallery-image::after {
+    display: block;
+    content: '';
+    width: calc(100% - 2rem);
+    height: calc(100% - 2.5rem);
+    z-index: 3;
+    border: 3px solid var(--white);
+    top: 1rem;
+    left: 1rem;
+    position: absolute;
+}
+.gallery-image img {
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    width: 100%;
+}
+.gallery-thumbnails {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    list-style: none;
+    margin: 1rem 0;
+}
+.gallery-thumbnails img {
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+/*
+SHOP INFO
+================================================ */
+.shop {
+    background: url('../images/1F6CF9F3-5529-4650-8EDA-44441C60CA60\ -\ コピー.jpg') no-repeat center top / cover;
+    margin-top: 16rem;
+    position: relative;
+    height: 40rem;
+}
+.shop-content {
+    background: 
+    padding: 3rem;
+    position: absolute;
+    top: -8rem;
+    width: 90vw;
+    left: 0;
+    right: 0;
+}
+
+
+/*子供たちの写真*/
+.title {
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+}
+
+#menu { 
+    display: flex;
+  
+}
+.kids {
+    width: 500px;
+    height: 600px;
+    padding: 30px;
+    border-radius: 500px;
+    
+}
+.text {
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    width: 800px;
+    text-align: left;
+    padding: 90px;
+}
+
+
+
+
+
+/*footer*/
+.happy {
+    font-size: 30px;
+}
+.shop h3 {
+    margin: 1rem 0;
+    padding-top: 2rem;
+    font-weight: normal;
+    border-top: 1px solid var(--light-grey);
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
+DESKTOP SIZE
+================================================ */
+@media(min-width: 800px){
+/* COMMON */
+    .title {
+        margin-bottom: 3rem;
+    }
+    .btn:hover {
+        color: var(--brown);
+        background: var(--light-green);
+    }
+
+/* SLIDE MENU */
+    .btn-menu:hover {
+        background-color: var(--light-green);
+    }
+    #menu-close:hover svg {
+        fill: var(--brown);
+    }
+    .menu-list a:hover {
+        transition: .4s;
+        color: var(--green);
+    }
+
+/* CONCEPT*/
+    .concept {
+        display: flex;
+        margin: 16rem 0;
+    }
+    .concept p {
+        text-align-last: left;
+    }
+    .concept img {
+        margin: -6rem 0;
+        max-width: 38rem;
+    }
+
+/* GALLERY */
+    .gallery {
+        flex-direction: row;
+    }
+    .gallery-image {
+        width: 50vw;
+        margin: 0;
+    }
+    .gallery-image img {
+        height: 100vh;
+    }
+    .gallery-content {
+        width: 30vw;
+    }
+    .gallery-thumbnails {
+        gap: 2vw;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .gallery-thumbnails img:hover {
+        box-shadow: 0 0 1rem rgba(0,0,0,.4);
+        transition: .4s;
+    }
+
+/* SHOP */
+    .shop {
+        margin-top: 20rem;
+        height: 110rem;
+    }
+}
