--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ GALLERY
 SHOP INFO
 ================================================ */
 .shop {
-    background: url('1F6CF9F3-5529-4650-8EDA-44441C60CA60\ -\ コピー.jpg') no-repeat center top / cover;
+    background: url('1F6CF9F3-5529-4650-8EDA-44441C60CA60 - コピー.jpg.jpg') no-repeat center top / cover;
     margin-top: 16rem;
     position: relative;
     height: 40rem;
