--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ VARIABLES
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: grey;
+    background-color: var(--light-grey);
     display: flex;
     align-items: center;
     justify-content: center;
