--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ VARIABLES
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: lightgreen;
+    background-color: var(--light-green;)
     z-index: 999;
     opacity: 1;
     visibility: visible;
