--- a/css/style.css
+++ b/css/style.css
@@ -210,8 +210,8 @@ SHOP INFO
 
 /*子供たちの写真*/
 .title {
-    margin-bottom: 10px;
-    padding-bottom: ;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 #menu { 
